--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Smash Tower Defense</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/src/css/style.css" />
   </head>
   <body>
     <div id="app">
@@ -45,6 +45,6 @@
       </section>
     </div>
 
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
