Implemented tower attacks and added speed button

--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
               >Health: --</span
             >
             <span id="wave-status">Wave: 0</span>
+            <div id="speed-controls" style="margin-left: 15px">
+              <button class="btn" id="speed-1x">1x</button>
+              <button class="btn" id="speed-2x">2x</button>
+              <button class="btn" id="speed-4x">4x</button>
+            </div>
           </div>
         </header>
 
