--- a/index.html
+++ b/index.html
@@ -54,26 +54,37 @@
       <!-- Game Screen -->
       <section id="game-screen" class="hidden">
         <header class="game-header">
-          <button id="home-btn" class="btn secondary-btn">Back Home</button>
-          <h2>Game</h2>
-          <div id="wave-menu">
-            <button id="start-wave-btn" class="btn">Start Enemy Wave</button>
-            <span
-              id="money-display"
-              style="margin-right: 15px; color: #f1c40f; font-weight: bold"
-              >💰 0</span
-            >
-            <span
-              id="health-display"
-              style="margin-right: 15px; color: #e74c3c; font-weight: bold"
-              >Health: --</span
-            >
-            <span id="wave-status">Wave: 0</span>
-            <div id="speed-controls" style="margin-left: 15px">
-              <button class="btn" id="speed-1x">1x</button>
-              <button class="btn" id="speed-2x">2x</button>
-              <button class="btn" id="speed-4x">4x</button>
+          <div class="header-section left">
+            <button id="home-btn" class="btn secondary-btn">
+              <span class="icon">&#8962;</span> Home
+            </button>
+          </div>
+
+          <div class="header-section center">
+            <div class="stat-card health">
+              <span class="stat-icon">&#10084;</span>
+              <span id="health-display">20</span>
             </div>
+            <div class="stat-card money">
+              <span class="stat-icon">&#128176;</span>
+              <span id="money-display">100</span>
+            </div>
+            <div class="stat-card wave">
+              <span class="stat-icon">&#127754;</span>
+              <span id="wave-status">Wave: 0</span>
+            </div>
+          </div>
+
+          <div class="header-section right">
+            <div id="speed-controls" class="speed-toggle">
+              <button class="btn speed-btn" id="speed-1x">1x</button>
+              <button class="btn speed-btn" id="speed-2x">2x</button>
+              <button class="btn speed-btn" id="speed-4x">4x</button>
+            </div>
+
+            <button id="start-wave-btn" class="btn primary-btn action-btn">
+              Start Wave &#9658;
+            </button>
           </div>
         </header>
 
