Added restart button

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
             <button id="home-btn" class="btn secondary-btn">
               <span class="icon">&#8962;</span> Home
             </button>
+            <button id="restart-btn" class="btn secondary-btn">
+              <span class="icon">&#8634;</span> Restart
+            </button>
           </div>
 
           <div class="header-section center">
