--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <div class="level-select">
           <button id="play-btn-1" class="btn primary-btn">Play Level 1</button>
           <button id="play-btn-2" class="btn primary-btn">Play Level 2</button>
+          <button id="play-btn-3" class="btn primary-btn">Play Level 3</button>
         </div>
       </section>
 
