--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
           <button id="play-btn-1" class="btn primary-btn">Play Level 1</button>
           <button id="play-btn-2" class="btn primary-btn">Play Level 2</button>
           <button id="play-btn-3" class="btn primary-btn">Play Level 3</button>
+          <button id="play-btn-4" class="btn primary-btn">Play Level 4</button>
         </div>
       </section>
 
