--- a/index.html
+++ b/index.html
@@ -6,38 +6,7 @@
     <title>Smash Tower Defense</title>
     <link rel="stylesheet" href="/src/css/style.css" />
     <style>
-      /* Keeping basic tower btn styles here or could move to style.css */
-      .tower-btn {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        width: 100%;
-        height: 60px;
-        margin-bottom: 10px;
-        padding: 0 15px;
-        border: 2px solid #ccc;
-        border-radius: 8px;
-        cursor: pointer;
-        transition: all 0.2s;
-        background: #fff;
-      }
-      .tower-btn:hover {
-        transform: scale(1.02);
-        border-color: #333;
-      }
-      .tower-btn.selected {
-        border-color: #3498db;
-        background: #eaf2f8;
-        box-shadow: 0 0 10px rgba(52, 152, 219, 0.5);
-      }
-      .tower-name {
-        font-weight: bold;
-        font-size: 14px;
-      }
-      .tower-cost {
-        font-size: 12px;
-        color: #555;
-      }
+      /* Styles moved to style.css */
     </style>
   </head>
   <body>
@@ -50,6 +19,9 @@
           <button id="play-btn-2" class="btn primary-btn">Play Level 2</button>
           <button id="play-btn-3" class="btn primary-btn">Play Level 3</button>
           <button id="play-btn-4" class="btn primary-btn">Play Level 4</button>
+          <button id="play-btn-5" class="btn primary-btn">
+            Play Level 5 (Hardcore)
+          </button>
         </div>
       </section>
 
