--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
           <button id="play-btn-2" class="btn primary-btn">Play Level 2</button>
           <button id="play-btn-3" class="btn primary-btn">Play Level 3</button>
           <button id="play-btn-4" class="btn primary-btn">Play Level 4</button>
-          <button id="play-btn-5" class="btn primary-btn">
-            Play Level 5 (Hardcore)
-          </button>
+          <button id="play-btn-5" class="btn primary-btn">Play Level 5</button>
         </div>
       </section>
 
